qt/gen_qstatemachine.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qstatemachine.cpp", cflags).}


type QStateMachineEventPriority* = cint
const
  QStateMachineNormalPriority* = 0
  QStateMachineHighPriority* = 1



type QStateMachineError* = cint
const
  QStateMachineNoError* = 0
  QStateMachineNoInitialStateError* = 1
  QStateMachineNoDefaultStateInHistoryStateError* = 2
  QStateMachineNoCommonAncestorForTransitionError* = 3
  QStateMachineStateMachineChildModeSetToParallelError* = 4



import gen_qstatemachine_types
export gen_qstatemachine_types

import
  gen_qabstractanimation,
  gen_qabstractstate,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qstate,
  std/sets
export
  gen_qabstractanimation,
  gen_qabstractstate,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qstate

type cQStateMachine*{.exportc: "QStateMachine", incompleteStruct.} = object
type cQStateMachineSignalEvent*{.exportc: "QStateMachine__SignalEvent", incompleteStruct.} = object
type cQStateMachineWrappedEvent*{.exportc: "QStateMachine__WrappedEvent", incompleteStruct.} = object

proc fcQStateMachine_new(): ptr cQStateMachine {.importc: "QStateMachine_new".}
proc fcQStateMachine_new2(childMode: cint): ptr cQStateMachine {.importc: "QStateMachine_new2".}
proc fcQStateMachine_new3(parent: pointer): ptr cQStateMachine {.importc: "QStateMachine_new3".}
proc fcQStateMachine_new4(childMode: cint, parent: pointer): ptr cQStateMachine {.importc: "QStateMachine_new4".}
proc fcQStateMachine_metaObject(self: pointer, ): pointer {.importc: "QStateMachine_metaObject".}
proc fcQStateMachine_metacast(self: pointer, param1: cstring): pointer {.importc: "QStateMachine_metacast".}
proc fcQStateMachine_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QStateMachine_metacall".}
proc fcQStateMachine_tr(s: cstring): struct_miqt_string {.importc: "QStateMachine_tr".}
proc fcQStateMachine_trUtf8(s: cstring): struct_miqt_string {.importc: "QStateMachine_trUtf8".}
proc fcQStateMachine_addState(self: pointer, state: pointer): void {.importc: "QStateMachine_addState".}
proc fcQStateMachine_removeState(self: pointer, state: pointer): void {.importc: "QStateMachine_removeState".}
proc fcQStateMachine_error(self: pointer, ): cint {.importc: "QStateMachine_error".}
proc fcQStateMachine_errorString(self: pointer, ): struct_miqt_string {.importc: "QStateMachine_errorString".}
proc fcQStateMachine_clearError(self: pointer, ): void {.importc: "QStateMachine_clearError".}
proc fcQStateMachine_isRunning(self: pointer, ): bool {.importc: "QStateMachine_isRunning".}
proc fcQStateMachine_isAnimated(self: pointer, ): bool {.importc: "QStateMachine_isAnimated".}
proc fcQStateMachine_setAnimated(self: pointer, enabled: bool): void {.importc: "QStateMachine_setAnimated".}
proc fcQStateMachine_addDefaultAnimation(self: pointer, animation: pointer): void {.importc: "QStateMachine_addDefaultAnimation".}
proc fcQStateMachine_defaultAnimations(self: pointer, ): struct_miqt_array {.importc: "QStateMachine_defaultAnimations".}
proc fcQStateMachine_removeDefaultAnimation(self: pointer, animation: pointer): void {.importc: "QStateMachine_removeDefaultAnimation".}
proc fcQStateMachine_globalRestorePolicy(self: pointer, ): cint {.importc: "QStateMachine_globalRestorePolicy".}
proc fcQStateMachine_setGlobalRestorePolicy(self: pointer, restorePolicy: cint): void {.importc: "QStateMachine_setGlobalRestorePolicy".}
proc fcQStateMachine_postEvent(self: pointer, event: pointer): void {.importc: "QStateMachine_postEvent".}
proc fcQStateMachine_postDelayedEvent(self: pointer, event: pointer, delay: cint): cint {.importc: "QStateMachine_postDelayedEvent".}
proc fcQStateMachine_cancelDelayedEvent(self: pointer, id: cint): bool {.importc: "QStateMachine_cancelDelayedEvent".}
proc fcQStateMachine_configuration(self: pointer, ): HashSet[pointer] {.importc: "QStateMachine_configuration".}
proc fcQStateMachine_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QStateMachine_eventFilter".}
proc fcQStateMachine_start(self: pointer, ): void {.importc: "QStateMachine_start".}
proc fcQStateMachine_stop(self: pointer, ): void {.importc: "QStateMachine_stop".}
proc fcQStateMachine_setRunning(self: pointer, running: bool): void {.importc: "QStateMachine_setRunning".}
proc fcQStateMachine_runningChanged(self: pointer, running: bool): void {.importc: "QStateMachine_runningChanged".}
proc fQStateMachine_connect_runningChanged(self: pointer, slot: int) {.importc: "QStateMachine_connect_runningChanged".}
proc fcQStateMachine_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QStateMachine_tr2".}
proc fcQStateMachine_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QStateMachine_tr3".}
proc fcQStateMachine_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QStateMachine_trUtf82".}
proc fcQStateMachine_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QStateMachine_trUtf83".}
proc fcQStateMachine_postEvent2(self: pointer, event: pointer, priority: cint): void {.importc: "QStateMachine_postEvent2".}
proc fQStateMachine_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QStateMachine_virtualbase_metacall".}
proc fcQStateMachine_override_virtual_metacall(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_metacall".}
proc fQStateMachine_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QStateMachine_virtualbase_eventFilter".}
proc fcQStateMachine_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_eventFilter".}
proc fQStateMachine_virtualbase_onEntry(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_onEntry".}
proc fcQStateMachine_override_virtual_onEntry(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_onEntry".}
proc fQStateMachine_virtualbase_onExit(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_onExit".}
proc fcQStateMachine_override_virtual_onExit(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_onExit".}
proc fQStateMachine_virtualbase_beginSelectTransitions(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_beginSelectTransitions".}
proc fcQStateMachine_override_virtual_beginSelectTransitions(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_beginSelectTransitions".}
proc fQStateMachine_virtualbase_endSelectTransitions(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_endSelectTransitions".}
proc fcQStateMachine_override_virtual_endSelectTransitions(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_endSelectTransitions".}
proc fQStateMachine_virtualbase_beginMicrostep(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_beginMicrostep".}
proc fcQStateMachine_override_virtual_beginMicrostep(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_beginMicrostep".}
proc fQStateMachine_virtualbase_endMicrostep(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_endMicrostep".}
proc fcQStateMachine_override_virtual_endMicrostep(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_endMicrostep".}
proc fQStateMachine_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QStateMachine_virtualbase_event".}
proc fcQStateMachine_override_virtual_event(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_event".}
proc fQStateMachine_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_timerEvent".}
proc fcQStateMachine_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_timerEvent".}
proc fQStateMachine_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_childEvent".}
proc fcQStateMachine_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_childEvent".}
proc fQStateMachine_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QStateMachine_virtualbase_customEvent".}
proc fcQStateMachine_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_customEvent".}
proc fQStateMachine_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QStateMachine_virtualbase_connectNotify".}
proc fcQStateMachine_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_connectNotify".}
proc fQStateMachine_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QStateMachine_virtualbase_disconnectNotify".}
proc fcQStateMachine_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QStateMachine_override_virtual_disconnectNotify".}
proc fcQStateMachine_staticMetaObject(): pointer {.importc: "QStateMachine_staticMetaObject".}
proc fcQStateMachine_delete(self: pointer) {.importc: "QStateMachine_delete".}
proc fcQStateMachineSignalEvent_new(param1: pointer): ptr cQStateMachineSignalEvent {.importc: "QStateMachine__SignalEvent_new".}
proc fcQStateMachineSignalEvent_sender(self: pointer, ): pointer {.importc: "QStateMachine__SignalEvent_sender".}
proc fcQStateMachineSignalEvent_signalIndex(self: pointer, ): cint {.importc: "QStateMachine__SignalEvent_signalIndex".}
proc fcQStateMachineSignalEvent_delete(self: pointer) {.importc: "QStateMachine__SignalEvent_delete".}
proc fcQStateMachineWrappedEvent_new(objectVal: pointer, event: pointer): ptr cQStateMachineWrappedEvent {.importc: "QStateMachine__WrappedEvent_new".}
proc fcQStateMachineWrappedEvent_new2(param1: pointer): ptr cQStateMachineWrappedEvent {.importc: "QStateMachine__WrappedEvent_new2".}
proc fcQStateMachineWrappedEvent_objectX(self: pointer, ): pointer {.importc: "QStateMachine__WrappedEvent_object".}
proc fcQStateMachineWrappedEvent_event(self: pointer, ): pointer {.importc: "QStateMachine__WrappedEvent_event".}
proc fcQStateMachineWrappedEvent_delete(self: pointer) {.importc: "QStateMachine__WrappedEvent_delete".}


func init*(T: type QStateMachine, h: ptr cQStateMachine): QStateMachine =
  T(h: h)
proc create*(T: type QStateMachine, ): QStateMachine =

  QStateMachine.init(fcQStateMachine_new())
proc create*(T: type QStateMachine, childMode: gen_qstate.QStateChildMode): QStateMachine =

  QStateMachine.init(fcQStateMachine_new2(cint(childMode)))
proc create*(T: type QStateMachine, parent: gen_qobject.QObject): QStateMachine =

  QStateMachine.init(fcQStateMachine_new3(parent.h))
proc create*(T: type QStateMachine, childMode: gen_qstate.QStateChildMode, parent: gen_qobject.QObject): QStateMachine =

  QStateMachine.init(fcQStateMachine_new4(cint(childMode), parent.h))
proc metaObject*(self: QStateMachine, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQStateMachine_metaObject(self.h))

proc metacast*(self: QStateMachine, param1: cstring): pointer =

  fcQStateMachine_metacast(self.h, param1)
